Bug 99359 - MIPS assembler coding-style fix
Summary: MIPS assembler coding-style fix
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other Linux
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 98856
  Show dependency treegraph
 
Reported: 2012-10-15 13:36 PDT by Balazs Kilvady
Modified: 2012-10-16 01:42 PDT (History)
6 users (show)

See Also:


Attachments
Coding style fix of MIPS assembler. (27.23 KB, patch)
2012-10-15 13:54 PDT, Balazs Kilvady
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Balazs Kilvady 2012-10-15 13:36:16 PDT
To be able to add new patches to MIPS part of webkit the old source should be coding-style fixed first as Oliver Hunt pointed out at review of bug #98856.
Comment 1 Balazs Kilvady 2012-10-15 13:54:03 PDT
Created attachment 168774 [details]
Coding style fix of MIPS assembler.

As Oliver Hunt suggested at review of patch #168436 of bug #98856, this is the separated coding style part of that patch.
Comment 2 Csaba Osztrogonác 2012-10-16 01:21:58 PDT
Comment on attachment 168774 [details]
Coding style fix of MIPS assembler.

LGTM, r=me.
Comment 3 WebKit Review Bot 2012-10-16 01:42:49 PDT
Comment on attachment 168774 [details]
Coding style fix of MIPS assembler.

Clearing flags on attachment: 168774

Committed r131427: <http://trac.webkit.org/changeset/131427>
Comment 4 WebKit Review Bot 2012-10-16 01:42:52 PDT
All reviewed patches have been landed.  Closing bug.